# bazel_strict_deps

./: BUILD.bazel  WORKSPACE  package.json
src/: main.ts
tools/: bazel_deps.bzl
