# Add rules here to build your software
# See https://docs.bazel.build/versions/main/build-ref.html#BUILD_files

load("@npm//@bazel/concatjs:index.bzl", "ts_library")
load("@npm//@bazel/typescript:index.bzl", "ts_config")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_library(
    name = "main",
    srcs = ["src/main.ts"],
    tsconfig = ":tsconfig",
    deps = [
        "@npm//@babel/core",
        "@npm//@types/babel__core",
    ],
)
